# med_list

./: .gitignore  manage.py  pyproject.toml
med_list/: admin.py  models.py  settings.py  urls.py  wsgi.py
med_list/data_migrations/: initial.sql
med_list/management/commands/: run_bot.py  scrapper.py
med_list/migrations/: 0001_initial.py  0002_drug_names.py  0003_remove_drug_name.py
tests/: test_med_list.py
