[tool.poetry]
name = "med_list"
version = "0.1.0"
description = ""
authors = ["Voronwe <fanafet@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2"
requests = "^2.22"
bs4 = "^0.0.1"
python-telegram-bot = "^12.2"
psycopg2 = "^2.8"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
